--- a/client/src/components/features/SortList/SortList.module.scss
+++ b/client/src/components/features/SortList/SortList.module.scss
@@ -8,6 +8,10 @@
     cursor: pointer;
     transition: all ease 0.4s;
 
+    .chev {
+      display: none;
+    }
+
     &:hover {
       letter-spacing: 1px;
     }
@@ -40,3 +44,28 @@
     }
   }
 }
+
+@media (max-width: 992px) {
+  .filterIsOn {
+    background: #000428; /* fallback for old browsers */
+    background: -webkit-linear-gradient(
+      to left,
+      #004e92,
+      #000428
+    ); /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(
+      to left,
+      rgba(0, 78, 146, 0.9),
+      rgba(0, 4, 40, 0.9)
+    );
+
+    .moduleTitle {
+      margin-top: 0;
+
+      .chev {
+        margin-left: 10px;
+        display: inline-flex;
+      }
+    }
+  }
+} ;
